--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ buildscript {
         google()
         mavenCentral()
     }
+
+    ext.kotlin_version = '1.6.0'
+    ext.kotlin_coroutines = '1.3.9'
+
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
