--- a/app/core/build.gradle
+++ b/app/core/build.gradle
@@ -5,6 +5,10 @@ plugins {
 
 }
 
+android {
+    compileSdk 31
+}
+
 dependencies {
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines"
